--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
     "@types/jest": "^24.0.25",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "antd": "^4.4.1",
+    "axios": "^0.19.2",
     "ionicons": "^5.0.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
@@ -46,7 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.2.1"
+    "@capacitor/cli": "2.2.1",
+    "eslint-plugin-react-hooks": "^4.0.7"
   },
   "description": "An Ionic project"
 }
